css/main.css
/* Light Green  #afb19b,  Light Moss   #6b6d5b,  Dark Moss #424331,  Hunter Green #232412,  Light Gray #d1d3bd */

/* Body of the index.html page */
body {
	font-family: "Marko One", serif;
	line-height: 125%;
	width: 90%; /* 800px */
	margin: 0 auto;
	padding: 1.875%; /* 15px/800px */
}

#full-screen-background-image {
  z-index: -999;
  min-height: 100%;
  min-width: 59.375%; /*475px*/
  width: 100%;
  height: auto;
  position: fixed;
  top: 0;
  left: 0;
  opacity: 0.3;
}

/*HEADER INFORMATION*/
#sitebranding img{
    float: left;
    position: relative;
    top: 1em;
    text-align: center;
    width: 120px;
    height: 80px;
}

#sitebranding h1	{
	color: #232412;
	text-shadow: 0.1875em 0.1875em 0.1875em #424331;
	font-size: 3.375em; /* 16px/54px */
	text-align: center;
	line-height: 100%;
	margin: 0;
	padding: 2.5%; /* 20px/800px */
}

#sitebranding p{
	font-family: "Inika", serif;
	text-align: center; 
	margin: 2.5%;
    position: relative;
    top: -0.5em; right: -3.25em;
}

/*Navigation Area */
	
nav {
	position: relative;
	font: 1.5em bold; /* 24px font that is bold */
    clear: right;
    text-align: center;
}

nav ul {
	overflow: auto;
}
	
nav li {
	padding-right: 2em;
	display: inline;
}

nav a {
	padding: 0;
	text-decoration: none;
	background: none;
	display: inline;
	width: 25%; /* 200px */
	height: 50%; /* 50px */
	line-height: 100%;
	text-align: center;
	color: #232412;	
}

/*BEGINNING OF NAVIGATION ELEMENTS*/
nav a:link {
	color: #d1d3bd;
	text-decoration: none;
}

nav a:visited {
	color: green;
}

nav a:hover {
	color: #afb19b;
	background: #d1d3bd;
}

nav a:active {
	color: #d1d3bd;
	font-weight: bold;
}	
/* END OF NAVIGATION ELEMENT INFORMATION */

/* PAGE CONTENT INFORMATION */

blockquote{
	font-size: 12pt;
	font-family: "Inika", serif;
    padding: 2em;
}

#intro img{
    text-align: center;
    float: left;
    padding: 3em 1em 1em 3em;
}

strong {
	font-weight: bold;
}

#content h2, #club_content h2, #locations_content h2, #equipment_content h2 {
    padding-top: 3em;
    text-shadow: 0.1em 0.1em 0.1em #424331;
    font-family: "Fondamento", cursive;
    font-size: 28pt;
    text-align: center;

}

#content p, #club_content p, #equipment_content p{
    line-height: 150%;
}

#content ul{
    list-style-type: none;
    background-color: #095021;
    border-radius: 0.5em;
    padding: 2em;
}

#content ul li{
    padding: 1em;
}

#club_content ul{
    list-style-type: none;
    padding-left: 0;
}

#club_content ul li{
    padding-bottom: 1em;
}

/* LOCATIONS_CONTENT INFORMATION*/
#locations_content p {
    padding-top: 20px;
    padding-bottom: 20px;
    line-height: 150%;
}

#locations_content table {
    border-collapse: collapse;
    margin-left: auto;
    margin-right: auto;
}

#locations_content th {
    text-align: left;
    background-color: #232412;
    color: #d1d3bd;
    border-radius: 5px;
    padding: 0.4em;
    letter-spacing: 3px;
}

#locations_content td {
    background-color: #afb19b;
    color: #700000;
    text-align: center;
    border: 1px solid #000;
    border-radius: 5px;
    display: block;
    padding: 0.4em;
    letter-spacing: 3px;
}
/* END OF LOCATIONS_CONTENT INFORMATION */

/* EQUIPMENT AND COOKING PAGE INFORMATION */

#equipment_content img{
    float: left;
    padding-right: 2em;
    padding-top: 2em;
}

#recipes, #hunting_equip, #recipe_submsn{
    padding-top: 2em;
}

#recipes h3, #equipment_content h4{
    font-size: 20pt;
}

#hunting_equip p{
    padding-top: 2em;
}

#equipment_content h3{
    clear: left;
    padding-top: 2em;
}

#recipe_submsn p{
    padding-bottom: 2em;
}

label, input{
    display: inline-block;
}

/* End of Content */

footer {
	color: #a0522d;
	text-align: center;
	/*background-color: #fff;*/
	opacity: 0.5;
	clear: both;
    padding: 0.5em;
    font-size: 10pt;
}
	
/* Media Queries
---------------------------------------------------------------------------- */

/* Tablet Portrait size to Standard 960 (devices and browsers) */
@media screen and (min-width: 768px) and (max-width: 956px) {
#full-screen-background-image {
  min-height: 100%;
  min-width: 49.686192468619%; /* 475px/956px */
  width: 100%;
  height: auto;
  position: fixed;
  top: 0;
  left: 0;
  opacity: 0.25;
}

aside {
	color: #000;
	font-size: 1em; /* 16px */
	font-family: "Fondamento", cursive;
	border: solid #000;
	background-color: #d1d3bd;
	opacity: 0.7;
}

footer {
		color: #a0522d;
		text-align: center;
		background-color: #000;
		opacity: 0.5;
		clear: both;
}
}

/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
@media only screen and (min-width: 480px) and (max-width: 767px) {
	
#full-screen-background-image {
  z-index: -999;
  min-height: 100%;
  min-width: 59.375%;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  opacity: 0.75;
}

aside {
	color: #095021;
	text-shadow: 0.125em 0.125em 0.125em #fff; /*2px 2px 2px #fff */
	font-size: 1em; /* 16px */
	font-family: "Fondamento", cursive;
	border: solid #ccc;
}

footer {
		color: #472507;
		text-align: center;
		clear: both;
}
}		

/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
@media only screen and (max-width: 479px) {

#image {
	margin: 0 auto;
	max-width: 100%;
	padding: 1.875%;
	display: none;
}

#full-screen-background-image {
  z-index: -999;
  min-height: 100%;
  min-width: 99.164926931106%;
  height: auto;
  position: fixed;
  top: 0;
  left: 0;
  opacity: 0.3;
}

h2 {
	color: #232412;
	text-shadow: 0.25em 0.25em 0.25em #424331; /*4px 4px 4px #424331 */
	font-family: "Inika", serif;
	font-size: 2.25em; /* 36px */
	text-align: center;
	line-height: 110%;
	margin: 0 auto;
	padding: 1.875%; /* 15px */
}

aside {
	color: #095021;
	font-size: 1em; /* 16px */
	font-family: "Fondamento", cursive;
	border: solid #ccc;
}

}

